--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "firebase": "^7.6.0",
+    "idb": "^4.0.5",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
